Se termino la primera versiona de la pagina de Rosarito Beach. Primera version responsive.

--- a/index.html
+++ b/index.html
@@ -302,56 +302,56 @@
                             <figure class="activities__card-img-container"><img class="activities__card-img" src="./images/kids-club.jpg" alt="kids-club"></figure>
                             <div class="activities__card-copy-container">
                                 <h4 class="activities__card-title">kids club</h4>
-                                <p class="activities__card-text">We've created the Rosarito Beach Hotel Kids Club to provide free activities for our younger guests during summer and holidays.</p><a class="button__outline" href="#">see more</a>
+                                <p class="activities__card-text">We've created the Rosarito Beach Hotel Kids Club to provide free activities for our younger guests during summer and holidays.</p><a class="activities__button button__outline" href="#">see more</a>
                             </div>
                         </article>
                         <article class="activities__card">
                             <figure class="activities__card-img-container"><img class="activities__card-img" src="./images/spa.jpg" alt="spa"></figure>
                             <div class="activities__card-copy-container">
                                 <h4 class="activities__card-title">spa</h4>
-                                <p class="activities__card-text">Swedish massage, aromatherapy, hydrotherapy and hot stones; and at much lower prices than less luxurious spas to the north.</p><a class="button__outline" href="#">see more</a>
+                                <p class="activities__card-text">Swedish massage, aromatherapy, hydrotherapy and hot stones; and at much lower prices than less luxurious spas to the north.</p><a class="activities__button button__outline" href="#">see more</a>
                             </div>
                         </article>
                         <article class="activities__card">
                             <figure class="activities__card-img-container"><img class="activities__card-img" src="./images/art-gallery.jpg" alt="art-gallery"></figure>
                             <div class="activities__card-copy-container">
                                 <h4 class="activities__card-title">art galleries</h4>
-                                <p class="activities__card-text">Great art is everywhere and going gallery hopping is becoming one the most popular things for people to do in Rosarito.</p><a class="button__outline" href="#">see more</a>
+                                <p class="activities__card-text">Great art is everywhere and going gallery hopping is becoming one the most popular things for people to do in Rosarito.</p><a class="activities__button button__outline" href="#">see more</a>
                             </div>
                         </article>
                         <article class="activities__card">
                             <figure class="activities__card-img-container"><img class="activities__card-img" src="./images/special-tours.jpg" alt="special-tours"></figure>
                             <div class="activities__card-copy-container">
                                 <h4 class="activities__card-title">special tours</h4>
-                                <p class="activities__card-text">We're offering  tours to help you see the wonders of Baja.  From the wine country, to fishing, to the great golf of Mexico. Come to Rosarito Hotel!</p><a class="button__outline" href="#">see more</a>
+                                <p class="activities__card-text">We're offering  tours to help you see the wonders of Baja.  From the wine country, to fishing, to the great golf of Mexico. Come to Rosarito Hotel!</p><a class="activities__button button__outline" href="#">see more</a>
                             </div>
                         </article>
                         <article class="activities__card">
                             <figure class="activities__card-img-container"><img class="activities__card-img" src="./images/whale-watching.jpg" alt="whale-watching"></figure>
                             <div class="activities__card-copy-container">
                                 <h4 class="activities__card-title">whale watching</h4>
-                                <p class="activities__card-text">The great annual grey whale migration is one of the most extraordinary migrations on the planet.</p><a class="button__outline" href="#">see more</a>
+                                <p class="activities__card-text">The great annual grey whale migration is one of the most extraordinary migrations on the planet.</p><a class="activities__button button__outline" href="#">see more</a>
                             </div>
                         </article>
                         <article class="activities__card">
                             <figure class="activities__card-img-container"><img class="activities__card-img" src="./images/wine-tasting.jpg" alt="wine-tasting"></figure>
                             <div class="activities__card-copy-container">
                                 <h4 class="activities__card-title">wine tasting</h4>
-                                <p class="activities__card-text">Baja California Wine Country is blessed with some of the most ideal Mediterranean climate for grape growing.</p><a class="button__outline" href="#">see more</a>
+                                <p class="activities__card-text">Baja California Wine Country is blessed with some of the most ideal Mediterranean climate for grape growing.</p><a class="activities__button button__outline" href="#">see more</a>
                             </div>
                         </article>
                         <article class="activities__card">
                             <figure class="activities__card-img-container"><img class="activities__card-img" src="./images/baja-golf.jpg" alt="baja-golf"></figure>
                             <div class="activities__card-copy-container">
                                 <h4 class="activities__card-title">baja's golf</h4>
-                                <p class="activities__card-text">You can play canyon-style golf throughout rolling hills all the while enjoying the natural beauty of the Pacific Ocean.</p><a class="button__outline" href="#">see more</a>
+                                <p class="activities__card-text">You can play canyon-style golf throughout rolling hills all the while enjoying the natural beauty of the Pacific Ocean.</p><a class="activities__button button__outline" href="#">see more</a>
                             </div>
                         </article>
                         <article class="activities__card">
                             <figure class="activities__card-img-container"><img class="activities__card-img" src="./images/surfing-lessons.jpg" alt="surfing-lessons"></figure>
                             <div class="activities__card-copy-container">
                                 <h4 class="activities__card-title">surfing lessons</h4>
-                                <p class="activities__card-text">Surf's Up! Look at a map of the Pacific Ocean and you will see that the peninsula of Baja California is a unique piece.</p><a class="button__outline" href="#">see more</a>
+                                <p class="activities__card-text">Surf's Up! Look at a map of the Pacific Ocean and you will see that the peninsula of Baja California is a unique piece.</p><a class="activities__button button__outline" href="#">see more</a>
                             </div>
                         </article>
                     </div>
@@ -401,7 +401,7 @@
                         <h2 class="contact__header-title">contacts</h2>
                     </header>
                     <div class="contact__items-container">
-                        <div class="contact__item">
+                        <div class="contact__item-one">
                             <div class="contact__element-container">
                                 <h3 class="contact__item-title">Location address</h3>
                                 <p class="contact__item-text">Boulevard Benito Juarez # 31. Rosarito, Baja California México</p>
@@ -415,7 +415,7 @@
                                 <p class="contact__item-text">011 [52] (661) 612-1111</p>
                             </div>
                         </div>
-                        <div class="contact__item">
+                        <div class="contact__item-two">
                             <div class="contact__item">
                                 <h3 class="contact__item-title">Reservations only from the USA</h3>
                                 <p class="contact__item-text">1 866 ROSARITO (767 2748)</p>
@@ -486,8 +486,8 @@
                         </svg>
                         <p class="footer__copyright">&#169;Rosarito Beach Hotel 2017</p>
                         <ul class="footer__social-list">
-                            <li class="footer__social-item footer__social-item-fb"><a class="button__line" href="#">facebook</a></li>
-                            <li class="footer__social-item"><a class="button__line" href="#">instagram</a></li>
+                            <li class="footer__social-item footer__social-item-fb"><a class="footer__social-link button__line" href="#">facebook</a></li>
+                            <li class="footer__social-item"><a class="footer__social-link button__line" href="#">instagram</a></li>
                         </ul>
                     </div>
                 </div>
